; ModuleID = '/home/carl/AnghaBench/freebsd/stand/common/extr_load_elf.c_elf_hash.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/common/extr_load_elf.c_elf_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @elf_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @elf_hash(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  store i8* %6, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %28, %1
  %8 = load i8*, i8** %3, align 8
  %9 = load i8, i8* %8, align 1
  %10 = zext i8 %9 to i32
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %33

12:                                               ; preds = %7
  %13 = load i64, i64* %4, align 8
  %14 = shl i64 %13, 4
  %15 = load i8*, i8** %3, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %3, align 8
  %17 = load i8, i8* %15, align 1
  %18 = zext i8 %17 to i64
  %19 = add i64 %14, %18
  store i64 %19, i64* %4, align 8
  %20 = load i64, i64* %4, align 8
  %21 = and i64 %20, 4026531840
  store i64 %21, i64* %5, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %12
  %24 = load i64, i64* %5, align 8
  %25 = lshr i64 %24, 24
  %26 = load i64, i64* %4, align 8
  %27 = xor i64 %26, %25
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %23, %12
  %29 = load i64, i64* %5, align 8
  %30 = xor i64 %29, -1
  %31 = load i64, i64* %4, align 8
  %32 = and i64 %31, %30
  store i64 %32, i64* %4, align 8
  br label %7

33:                                               ; preds = %7
  %34 = load i64, i64* %4, align 8
  ret i64 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
